--- a/public/css/book/form.css
+++ b/public/css/book/form.css
@@ -86,3 +86,12 @@
    display: flex;
    flex-direction: row;
 }
+.box {
+   background-color: #F1F1F1;
+   border: 1px #D1D1D1 solid;
+   margin-top: 10px;
+}
+
+.page {
+   padding: 20px;
+}
